--- a/css/slzh.css
+++ b/css/slzh.css
@@ -27,76 +27,84 @@ body {
     html {
         font-size: 55.2px; } }
 header{
-    height: 0.36rem;
-    color: #4ebbfe;
-    margin-top: 0.4rem;
-    padding-bottom: 0.27rem;
-    padding-top: 0.25rem;
+    height: 0.88rem;
+    padding: 0 0.24rem;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 0.01rem solid rgba(41, 167, 255, 0.13);
 }
-header img{
-    height: 0.36rem;
-    line-height: 0.36rem;
-    text-align: center;
-    margin: 0 auto;
-    color: #4ebbfe;
+header a{
+    width: 0.25rem;
+    height: 0.88rem;
+    padding: 0.23rem 0;
 }
-header p{
-    width: 0.74rem;
-    height: 0.36rem;
-    line-height: 0.36rem;
-    font-size: 0.34rem;
-    text-align: center;
-    margin: 0 auto;
+header a img{
+    width: 0.25rem;
+    color: #36a8fe;
+}
+header span{
+    display: inline-block;
+    font-size: 0.38rem;
     color: #4ebbfe;
+    margin: 0.27rem 0;
+    line-height: 0.4rem;
 }
 nav{
-    height: 0.88rem;
-}
-nav ul{
-    height: 0.88rem;
+    margin: 0.3rem 0;
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
-}
-nav ul li {
-    width: 0.8rem;
-    height: 0.4rem;
-}
-nav ul li a{
-    width: 0.44rem;
-    height: 0.4rem;
-    margin-right: 20px;
-}
-.end{
+    align-content: center;
 
 }
-.left {
-    width: 1.8rem;
-    height: 1.8rem;
-    padding: 0.3rem;
+.nav1{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+
 }
-.left img{
-    width: 1.2rem;
-    height: 1.2rem;
+.nav1 span{
+    font-size: 0.22rem;
+    letter-spacing: 0.01rem;
+    color: #36d681;
 }
-.right{
-    width: 4.9rem;
-    height: 1.8rem;
+.nav1 img{
+    margin: auto 0;
+    width: 0.18rem;
+    height: 0.1rem;
 }
-.right h1{
-    width:1.28rem;
-    height: 0.32rem;
-    font-size: 0.16rem;
+.nav2{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+
+}
+.nav2 span{
+    font-size: 0.22rem;
+    letter-spacing: 0.01rem;
+    color: #3bacfe;
+}
+.nav2 img{
+    margin: auto 0;
+    width: 0.18rem;
+    height: 0.1rem;
+}
+.middle{
+    margin-top: 0.7rem;
 }
 .one{
-    width: 3.3rem;
-    height: 0.24rem;
+    margin-bottom: 0.66rem;
 }
-.one li{
-    width:1.2rem;
-    height: 100%;
+.ome .left {
+    width: 1.74rem;
+    height: 1.74rem;
+    margin-right: 0.54rem;
+
 }
-one li p{
-    width: 0.5rem;
-    height: 100%;
+.ome .left img {
+    width: 1.74rem;
+    height: 1.74rem;
+
+}
+.one .right{
+
 }
