--- a/css/spxq.css
+++ b/css/spxq.css
@@ -329,6 +329,8 @@ footer ul li{
     display: flex;
     flex-direction:column;
     flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
 }
 footer li:nth-child(1) img{
     width: 0.5rem;
@@ -337,6 +339,7 @@ footer li:nth-child(1) img{
 footer li:nth-child(2) img{
     width: 0.5rem;
     height: 0.5rem;
+    margin: 0 8px;
 }
 footer li:nth-child(3) img{
     width: 1.96rem;
