--- a/css/sscg.css
+++ b/css/sscg.css
@@ -1,7 +1,11 @@
+@import "base.css";
 html {
     font-size: 100px; }
 
 body {
+    margin: 0;
+    padding: 0;
+    width: 7.5rem;
     font-size: 16px;
     list-style: none;
 }
@@ -31,10 +35,11 @@ header{
     display: flex;
     justify-content: space-between;
     border-bottom: 0.01rem solid rgba(41, 167, 255, 0.13);
+    margin-bottom: 0.24rem;
 }
 header a{
     width: 0.25rem;
-    height: 0.88rem;
+    height: 0.25rem;
     padding: 0.23rem 0;
 }
 header a img{
@@ -49,65 +54,77 @@ header span{
     line-height: 0.4rem;
 }
 nav{
-    margin: 0.3rem 0;
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-
+    width: 7.1rem;
+    height: 0.6rem;
+    margin-left: 0.18rem;
+    margin-bottom: 0.25rem;
+    background-color: #ebf7ff;
+    border-radius: 0.3rem;
+    border: solid 0.03rem rgba(55, 169, 254, 0.17);
+    opacity: 0.58;
 }
-.nav1{
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-
+nav p{
+    margin: 0.18rem 0 0.18rem 0.3rem;
+    font-size: 0.24rem;
+    float: left;
 }
-.nav1 span{
-    font-size: 0.22rem;
-    letter-spacing: 0.01rem;
-    color: #36d681;
+nav .sousuo{
+    width: 0.8rem;
+    height: 0.44rem;
+    margin: 0.08rem 0.09rem;
+    float: right;
+    background-color: #a4e0bd;
+    border-radius: 21px;
 }
-.nav1 img{
-    margin: auto 0;
-    width: 0.18rem;
-    height: 0.1rem;
-}
-.nav2{
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-
-}
-.nav2 span{
-    font-size: 0.22rem;
-    letter-spacing: 0.01rem;
-    color: #3bacfe;
-}
-.nav2 img{
-    margin: auto 0;
-    width: 0.18rem;
-    height: 0.1rem;
+nav .sousuo img {
+    width: 0.32rem;
+    height: 0.32rem;
+    margin: 0.06rem 0.24rem;
 }
 .middle{
-    margin-top: 0.7rem;
+    width: 7.02rem;
+    overflow: hidden;
+    margin: 0.44rem 0.24rem 0.33rem 0.24rem;
+    position: relative;
+
+}
+.middle span:nth-child(1){
+    font-size: 0.32rem;
+    color: #41b2fc;
+    margin-left: 0.2rem;
+    float: left;
+    position: relative;
+}
+.middle span:nth-child(1)::before{
+    content: ' ';
+    width: 0.1rem;
+    height: 0.05rem;
+    background: #34da87;
+    border-radius: 0.03rem;
+    position: absolute;
+    left: -0.1rem;
+    top: 0.2rem;
+}
+.middle span:nth-child(2){
+    font-size: 0.32rem;
+    color: #4f5b64;
+    float: left;
 }
 .one{
-    margin-bottom: 0.66rem;
+    margin: 0 0.24rem 0.4rem 0.24rem;
     overflow: hidden;
+    position: relative;
 }
 .one .left {
     width: 1.74rem;
     height: 1.74rem;
     margin-right: 0.54rem;
     float: left;
-
 }
 .one .left img {
-    width: 1.74rem;
     height: 1.74rem;
-
 }
 .one .right{
-    height: 2.48rem;
     float: left;
     margin-bottom: 0.18rem;
     overflow: hidden;
@@ -195,4 +212,48 @@ nav{
     font-size: 0.26rem;
     letter-spacing: 0;
     color: #fbb548;
+}
+.two{
+    margin: 0 0.24rem 0.4rem 0.24rem;
+    overflow: hidden;
+    position: relative;
+}
+.two .left {
+    width: 1.74rem;
+    height: 1.74rem;
+    margin-right: 0.54rem;
+    float: left;
+}
+.two .left img {
+    height: 1.74rem;
+}
+.two .right{
+    float: left;
+    margin-bottom: 0.18rem;
+    overflow: hidden;
+}
+.two .right h2{
+    font-size: 0.3rem;
+    letter-spacing: 0.01rem;
+    color: #000000;
+    opacity: 0.6;
+}
+
+.two .right span:nth-child(2){
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.right-four{
+    width: 1.24rem;
+    height: 0.45rem;
+    background-color: #3bacfe;
+    border-radius: 0.22rem;
+    font-size: 0.2rem;
+    color: #ffffff;
+    text-align: center;
+    line-height: 0.45rem;
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
